--- a/scss/components/_fleets.scss
+++ b/scss/components/_fleets.scss
@@ -26,7 +26,7 @@
       }
 
       &.mission_defend {
-        background: rgba($color-positive, 0.14);
+        background: rgba($color-positive, .14);
       }
     }
   }
