--- a/scss/components/_mining.scss
+++ b/scss/components/_mining.scss
@@ -12,7 +12,7 @@
 
     .textlabel {
       display: inline-block;
-      margin: 0.2rem 0 0 2rem;
+      margin: .2rem 0 0 2rem;
     }
 
     .metal,
@@ -69,11 +69,11 @@
   }
 
   #guard_cost {
-    margin-bottom: 0.5rem;
+    margin-bottom: .5rem;
   }
 
   input[type="number"] {
-    padding-right: 0.1rem;
+    padding-right: .1rem;
     min-width: 3rem;
   }
 
