--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -42,4 +42,4 @@ $color-zikonian: #c93716;
 $color-eitraides: #111111;
 //
 $color-progress-completed: #378059;
-$color-progress-expected: rgba(#FAC05E, 0.4);
+$color-progress-expected: rgba(#FAC05E, .4);
