--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -5,8 +5,8 @@
         font-size: 2rem;
 
         img.ally_def_eta_toggle_img {
-          width: 0.6875rem;
-          height: 0.6875rem;
+          width: .6875rem;
+          height: .6875rem;
         }
       }
 
@@ -28,8 +28,8 @@
             cursor: pointer;
 
             img {
-              width: 0.6875rem;
-              height: 0.6875rem;
+              width: .6875rem;
+              height: .6875rem;
             }
           }
 
@@ -64,7 +64,7 @@
 
               &:before {
                 content: "Asteroids:";
-                font-size: 0.6875rem;
+                font-size: .6875rem;
                 margin: 5px 5px 0 0;
               }
             }
@@ -75,7 +75,7 @@
               &:before {
                 white-space: nowrap;
                 content: "Base fleet:";
-                font-size: 0.6875rem;
+                font-size: .6875rem;
                 margin: 5px 5px 0 0;
               }
             }
@@ -90,7 +90,7 @@
               &:after {
                 padding: 2px 4px;
                 border-radius: 4px;
-                font-size: 0.6875rem;
+                font-size: .6875rem;
                 background: #2d72bb;
                 color: white;
                 content: "BATTLE CALC";
@@ -109,7 +109,7 @@
         }
 
         .ally_def_attackers {
-          font-size: 0.9rem;
+          font-size: .9rem;
 
           > div {
             > div {
@@ -188,17 +188,17 @@
                 }
 
                 &.scan_age_new {
-                  //border: 1px solid rgba($color-positive, 0.7);
+                  //border: 1px solid rgba($color-positive, .7);
                   color: rgba($color-positive, 1) !important;
                 }
 
                 &.scan_age_older {
-                  //border: 1px solid rgba($color-neutral, 0.7);
+                  //border: 1px solid rgba($color-neutral, .7);
                   color: rgba($color-neutral, 1) !important;
                 }
 
                 &.scan_age_old {
-                  //border: 1px solid rgba(255, 255, 0, 0.7);
+                  //border: 1px solid rgba(255, 255, 0, .7);
                   color: rgba(255, 255, 0, 1) !important;
                 }
 
@@ -244,7 +244,7 @@
                 color: $color-primary !important;
                 background-color: transparent !important;
                 border-color: transparent !important;
-                font-size: 0.9rem !important;
+                font-size: .9rem !important;
               }
             }
 
@@ -270,8 +270,8 @@
               box-shadow: none !important;
 
               input[type="checkbox"] {
-                border: 1px solid rgba(50, 205, 50, 0.5) !important;
-                box-shadow: inset 0 0 7px 1px rgba(50, 205, 50, 0.25);
+                border: 1px solid rgba(50, 205, 50, .5) !important;
+                box-shadow: inset 0 0 7px 1px rgba(50, 205, 50, .25);
 
                 &:before {
                   color: rgb(50, 205, 50);
@@ -286,7 +286,7 @@
             display: flex;
             align-items: center;
             padding-left: 4px;
-            font-size: 0.75rem;
+            font-size: .75rem;
             text-transform: uppercase;
 
             .ally_def_details_classes {
@@ -315,7 +315,7 @@
                 content: "BATTLE CALC:";
                 position: relative;
                 display: inline;
-                font-size: 0.75rem;
+                font-size: .75rem;
                 padding-right: 4px;
                 letter-spacing: 1px;
               }
@@ -373,7 +373,7 @@
         }
 
         .relations_war {
-          background-color: rgba($color-negative, 0.15);
+          background-color: rgba($color-negative, .15);
         }
 
 
@@ -383,7 +383,7 @@
         }
 
         .ally_def_defenders {
-          font-size: 0.9rem;
+          font-size: .9rem;
 
           .ally_def_defender {
             .ally_def_defender_coords {
@@ -406,7 +406,7 @@
 
                 &:before {
                   content: "*";
-                  font-size: 0.75rem;
+                  font-size: .75rem;
                 }
               }
             }
