--- a/scss/components/_foreign_affairs.scss
+++ b/scss/components/_foreign_affairs.scss
@@ -22,7 +22,7 @@
 
       .superhighlight {
         display: inline-block;
-        padding: 0.5rem 0 0.25rem;
+        padding: .5rem 0 .25rem;
         font-size: 1.3rem;
       }
 
