--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -14,7 +14,7 @@ select,
   color: $color_text;
   font-size: 1rem;
   height: 1.5rem;
-  transition: ease all 0.3s;
+  transition: ease all .3s;
 
   &:focus {
     outline: none;
@@ -36,7 +36,7 @@ input[type="text"],
 input[type="number"],
 input[type="email"],
 input[type="password"] {
-  padding: 0.25rem !important;
+  padding: .25rem !important;
   color: $color_text;
   background-color: $color-borders;
 }
@@ -54,7 +54,7 @@ input[type="checkbox"] {
   background-color: $color-borders;
   cursor: pointer;
   outline: none;
-  transition: 0.3s;
+  transition: .3s;
 
   &:checked::before {
     display: block;
