--- a/scss/components/_galaxy.scss
+++ b/scss/components/_galaxy.scss
@@ -1,6 +1,6 @@
 #page_galaxy {
   input[type="number"] {
-    padding: 0.25rem !important;
+    padding: .25rem !important;
     min-width: 3rem;
     height: 1.5rem;
     color: $color-primary;
