--- a/scss/components/_galaxy_forum.scss
+++ b/scss/components/_galaxy_forum.scss
@@ -69,7 +69,7 @@ div[class^='forum_thread_header'] {
 }
 
 .forum_post {
-  padding: 0 0.5rem;
+  padding: 0 .5rem;
   display: flex;
   flex-flow: row wrap;
 }
@@ -108,7 +108,7 @@ div[class^='forum_thread_header'] {
   order: 5;
   flex-basis: 100%;
   flex-shrink: 0;
-  padding-top: 0.5rem;
+  padding-top: .5rem;
 }
 
 .forum_post_notes {
@@ -121,7 +121,7 @@ div[class^='forum_thread_header'] {
 
 .forum_post_seperator {
   border-top: 1px solid $color-offwhite;
-  margin: 1rem 0.5rem;
+  margin: 1rem .5rem;
 }
 
 .forum_post_delete,
@@ -141,7 +141,7 @@ div[class^='forum_thread_header'] {
 }
 
 .mceEditor {
-  margin: 0.5rem;
+  margin: .5rem;
   width: calc(100% - 1rem);
   border-width: 2px !important;
 }
