--- a/scss/components/_global.scss
+++ b/scss/components/_global.scss
@@ -1,5 +1,5 @@
 /* Name:       Planetarion Modern - Light
-   Version:    0.5b
+   Version:    .5b
    Date:       05-01-2020
    Author:     Leshy
 
@@ -13,7 +13,7 @@
    background colour is chosen for these buttons.
    -------------------------------------------------------*/
 :root {
-  font-size: 0.9rem;
+  font-size: .9rem;
   --col-text-main: #111111;
   --col-text-highlight: #fefefe;
   --col-accent-light: #75b44a;
@@ -31,7 +31,7 @@
   --col-xandathrii: #2ba87e;
   --col-zikonian: #c93716;
   --col-eitraides: #111111;
-  --txt-small: 0.8rem;
+  --txt-small: .8rem;
 }
 
 
@@ -113,11 +113,11 @@ option {
   position: relative;
   width: 100%;
   max-width: 90rem;
-  padding: 3rem 0.5rem 0;
+  padding: 3rem .5rem 0;
   display: grid;
   grid-template-columns: 12rem 1fr 1fr;
   grid-template-rows: auto 1fr 1rem;
-  grid-column-gap: 0.5rem;
+  grid-column-gap: .5rem;
   @include respond-below(sm) {
     grid-template-columns: 100px auto;
     grid-template-rows: 165px auto auto;
@@ -135,9 +135,9 @@ option {
   background: $color-borders !important;
   border: 0;
   color: $color-text;
-  padding: 0.25rem 0.5rem;
+  padding: .25rem .5rem;
   white-space: initial;
-  box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, 0.4);
+  box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, .4);
 }
 
 #mail_new {
@@ -291,12 +291,12 @@ option {
   a {
     display: inline-block;
     margin: .5rem 0;
-    padding: 0.25rem 0.5rem;
+    padding: .25rem .5rem;
     color: $color-primary;
     //border: 1px solid $color-primary;
     cursor: pointer;
     font-weight: bold;
-    transition: 0.3s;
+    transition: .3s;
 
     &:hover {
       text-decoration: none;
@@ -311,7 +311,7 @@ option {
 .important_message {
   .title {
     display: block;
-    padding: 0.5rem;
+    padding: .5rem;
     font-size: 1rem;
     background: $color-borders;
     color: $color-text;
@@ -321,11 +321,11 @@ option {
   .time {
     display: block;
     font-size: $text-small;
-    margin: 0.25rem 0.5rem 1rem;
+    margin: .25rem .5rem 1rem;
   }
 
   p {
-    margin: 0.5rem;
+    margin: .5rem;
   }
 }
 
