--- a/scss/components/_login_support_manual_stats.scss
+++ b/scss/components/_login_support_manual_stats.scss
@@ -15,7 +15,7 @@
   }
 
   #tnav {
-    margin: -2.25rem 0.5rem 0;
+    margin: -2.25rem .5rem 0;
   }
 
   #contents_header,
@@ -75,8 +75,8 @@
   }
 
   .container {
-    box-shadow: 0 1px 5px rgba(255, 255, 255, 0.12);
-    border-radius: 0.5rem;
+    box-shadow: 0 1px 5px rgba(255, 255, 255, .12);
+    border-radius: .5rem;
     overflow: hidden;
 
     .header:first-child {
@@ -140,11 +140,11 @@
   #contents {
     display: grid;
     grid-template-columns: 12rem minmax(12rem, 60rem) 1fr;
-    grid-column-gap: 0.5rem;
+    grid-column-gap: .5rem;
   }
 
   #menu {
-    margin: 0.5rem 0 0.5rem 0.5rem;
+    margin: .5rem 0 .5rem .5rem;
     grid-column: 1 / 2;
 
     li {
@@ -153,7 +153,7 @@
 
     .entry_sep {
       display: block;
-      margin: 0.5rem;
+      margin: .5rem;
       border-top: 1px solid rgba($color-primary, .5);
     }
 
@@ -164,7 +164,7 @@
 
   .entries a {
     font-weight: normal;
-    margin-left: 0.5rem;
+    margin-left: .5rem;
     text-indent: -0.5rem;
   }
 
@@ -188,7 +188,7 @@
     color: $color-text !important;
     font-size: $text-small;
     margin-left: 1rem;
-    padding-left: 0.5rem;
+    padding-left: .5rem;
     border-left: 5px solid $color-negative;
     text-transform: uppercase;
     /* font-weight: bold; */
@@ -212,7 +212,7 @@
 .stats_tbl {
   th, td {
     //background-color: var(--col-panel-light);
-    padding: 0.15rem 0.5rem;
+    padding: .15rem .5rem;
   }
 
   th[colspan="17"] {
