--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -17,16 +17,16 @@
   }
 
   li {
-    padding: 0 0.5rem 0.15rem;
+    padding: 0 .5rem .15rem;
   }
 
   > li {
-    padding: 0 0 0.15rem;
+    padding: 0 0 .15rem;
 
     &#menu_overview,
     &#menu_preferences,
     &#menu_logout {
-      padding: 0 0.5rem 0.15rem;
+      padding: 0 .5rem .15rem;
     }
 
     &:nth-child(n+3) {
