--- a/scss/components/_news.scss
+++ b/scss/components/_news.scss
@@ -13,7 +13,7 @@
         tr {
           th,
           td {
-            background: rgba(0, 0, 0, 0.25);
+            background: rgba(0, 0, 0, .25);
           }
         }
       }
