--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -3,7 +3,7 @@
 #contents {
   grid-column: 2 / 3;
   grid-column-end: 4;
-  margin: 0.5rem 0;
+  margin: .5rem 0;
   background: transparent;
   border: none;
   width: auto;
@@ -34,8 +34,8 @@ div#contents_information {
   display: inline-block;
   height: 1.5rem;
   width: 1.5rem;
-  margin: 0.5rem;
-  padding: 0 0 0 0.05rem;
+  margin: .5rem;
+  padding: 0 0 0 .05rem;
   //border: 1px solid $color-primary;
   border-radius: 50%;
   background: transparent;
@@ -54,16 +54,16 @@ div#contents_information {
 .header,
 h2 {
   margin: 1rem 0;
-  padding: 0.5rem 0;
+  padding: .5rem 0;
   font-weight: bold;
   text-transform: uppercase;
   font-size: 1.2rem;
   color: $color-offwhite;
   background: $color-borders;
   background: linear-gradient(180deg, $color-borders 0%, $color-borders 15%, $color-borders 100%) !important;
-  //border: 1px solid rgba($color-primary, 0.5);
+  //border: 1px solid rgba($color-primary, .5);
   border: 1px solid transparent;
-  border-image: linear-gradient(to right, transparent 0%, rgba(82, 165, 248, 0.5) 50%, transparent 100%);
+  border-image: linear-gradient(to right, transparent 0%, rgba(82, 165, 248, .5) 50%, transparent 100%);
   border-image-slice: 1;
 
   &:empty {
@@ -79,9 +79,9 @@ h2 {
 #notice {
   background-color: black;
   padding: .75rem;
-  margin-top: 0.5rem;
+  margin-top: .5rem;
   border: 1px solid transparent;
-  border-image: linear-gradient(to right, transparent 0%, rgba(82, 165, 248, 0.5) 50%, transparent 100%);
+  border-image: linear-gradient(to right, transparent 0%, rgba(82, 165, 248, .5) 50%, transparent 100%);
   border-image-slice: 1;
 
   .header,
@@ -102,7 +102,7 @@ h2 {
 
 .maintext {
   p + p {
-    margin-top: 0.5rem;
+    margin-top: .5rem;
   }
 
   table {
@@ -127,7 +127,7 @@ span.center {
 }
 
 .container .header:first-child {
-  margin-top: 0.5rem;
+  margin-top: .5rem;
 }
 
 .tooltip,
@@ -146,21 +146,26 @@ span.center {
 #con_fleets,
 #dships_box {
   background: $color-borders !important;
-  color: $color-primary !important;
+  color: $color-offwhite !important;
   border: 1px solid rgba($color-primary, .5);
-  padding: 0.25rem 0.5rem;
+  padding: .25rem .5rem;
   white-space: initial;
-  box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, 0.4);
+  box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, .4);
+}
+
+.tooltip {
+  top: auto !important;
+  left: auto !important;
 }
 
 #pabox_inner {
   top: 0 !important;
   left: 0 !important;
-  padding: 0.5rem;
+  padding: .5rem;
 
   h2 {
     background: none;
-    margin: 0 0 0.5rem;
+    margin: 0 0 .5rem;
     padding: 0;
     font-size: 1rem;
   }
@@ -213,7 +218,7 @@ span.center {
 }
 
 .tab_link {
-  padding: 0.25rem 0.5rem;
+  padding: .25rem .5rem;
 
   &:hover {
     color: $color-black;
