--- a/scss/components/_production.scss
+++ b/scss/components/_production.scss
@@ -18,7 +18,7 @@
 
       a {
         display: inline-block;
-        padding: 0.25rem 1rem;
+        padding: .25rem 1rem;
 
         &:hover {
           color: black;
@@ -75,7 +75,7 @@
 span.small.notice_warning {
   font-size: $text-small !important;
   font-style: italic;
-  padding-left: 0.5rem;
+  padding-left: .5rem;
   color: $color-neutral;
 }
 
@@ -90,7 +90,7 @@ span.small.notice_warning {
     .textlabel {
       font-size: $text-small;
       font-weight: bold;
-      padding-bottom: 0.5rem;
+      padding-bottom: .5rem;
     }
   }
 }
@@ -101,18 +101,18 @@ span.small.notice_warning {
       tr {
         &:first-child th {
           border-bottom: 1px solid $color-offwhite;
-          padding-bottom: 0.25rem;
+          padding-bottom: .25rem;
         }
 
         &:nth-child(2) {
           th,
           td {
-            padding-top: 0.25rem;
+            padding-top: .25rem;
           }
         }
 
         &:nth-child(6) th {
-          padding-top: 0.5rem;
+          padding-top: .5rem;
         }
       }
 
@@ -124,7 +124,7 @@ span.small.notice_warning {
     }
 
     & + table {
-      margin-top: 0.5rem;
+      margin-top: .5rem;
 
       th:first-child {
         width: 45%;
