--- a/scss/components/_research_construction_waves.scss
+++ b/scss/components/_research_construction_waves.scss
@@ -9,8 +9,8 @@
 .scans .title,
 .governments .title {
   display: block;
-  padding: 0.25rem 0.5rem;
-  margin-bottom: 0.5rem;
+  padding: .25rem .5rem;
+  margin-bottom: .5rem;
   background: $color-borders;
   //background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
   font-size: 1.3rem;
@@ -22,7 +22,7 @@
   .title {
     display: inline-block;
     font-size: 1rem;
-    margin-bottom: 0.25rem;
+    margin-bottom: .25rem;
   }
 }
 
@@ -52,7 +52,7 @@
 }
 
 .scans p {
-  padding-left: 0.5rem;
+  padding-left: .5rem;
 }
 
 .research_next[id] p:not(.center) {
@@ -99,7 +99,7 @@
 
   p,
   .resources {
-    padding-left: 0.5rem;
+    padding-left: .5rem;
   }
 }
 
@@ -109,7 +109,7 @@
   display: flex;
   flex-wrap: wrap;
   text-align: left;
-  padding: 1rem 0.5rem;
+  padding: 1rem .5rem;
 
   .resources {
     flex-basis: 70%;
@@ -133,14 +133,14 @@
 .construction_built {
   flex-basis: 33%;
   text-align: left;
-  padding: 1rem 0.5rem;
+  padding: 1rem .5rem;
 
   .textvalue {
     font-weight: bold;
   }
 
   .progress_wrapper {
-    margin: 0.5rem 0;
+    margin: .5rem 0;
 
     .progress_expected {
       background-image: none;
@@ -172,7 +172,7 @@
     position: relative;
     font-style: normal;
     border-top: 1px solid rgba($color-primary, .5);
-    margin: 0.5rem 0 0 1.5rem;
+    margin: .5rem 0 0 1.5rem;
     padding: 1rem 0 0;
 
     .researchform p {
@@ -210,11 +210,11 @@
 }
 
 .research_branch_list {
-  padding: 0.25rem 0.5rem;
+  padding: .25rem .5rem;
   background: $color-borders;
   //background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
   border: 0;
-  margin: 0 0 0.5rem 1.5rem;
+  margin: 0 0 .5rem 1.5rem;
   font-style: normal;
 
   p {
@@ -230,7 +230,7 @@
   .resources {
     font-size: $text-small;
     margin-top: 1rem;
-    padding-left: 0.5rem;
+    padding-left: .5rem;
   }
 
   .scan_form {
