--- a/scss/components/_top_bar.scss
+++ b/scss/components/_top_bar.scss
@@ -5,7 +5,7 @@
 #page_support #header,
 #page_manual #header {
   width: 100% !important;
-  padding: 0.5rem;
+  padding: .5rem;
   background: $color-black-dark;
   background: linear-gradient(180deg, $color-black-light 0%, $color-black-medium 15%, $color-black-dark 100%);
 }
@@ -78,6 +78,6 @@
   }
 
   span {
-    padding: 0.25rem 1rem;
+    padding: .25rem 1rem;
   }
 }
