--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -24,11 +24,11 @@
   padding: 0;
 }
 
-div#contents_information {
-  position: absolute;
-  right: 0px;
-  margin-top: 3px;
-}
+//div#contents_information {
+//  position: absolute;
+//  right: 0px;
+//  margin-top: 3px;
+//}
 
 #manual_info {
   display: inline-block;
@@ -36,18 +36,19 @@ div#contents_information {
   width: 1.5rem;
   margin: .5rem;
   padding: 0 0 0 .05rem;
-  //border: 1px solid $color-primary;
+  border: 1px solid $color-primary;
   border-radius: 50%;
   background: transparent;
-  //background: linear-gradient(135deg, $color-primary 0%, $color-primary-dark 100%);
   color: $color-primary;
   font-size: 1rem;
   text-align: center;
+  opacity: 0.5;
+  transition: ease all 0.3s;
 
   &:hover {
     text-decoration: none;
-    background: $color-black-dark;
-    //background: linear-gradient(180deg, $color-black-light 0%, $color-black-medium 15%, $color-black-dark 100%);
+    background: $color-primary;
+    color: black;
   }
 }
 
