--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -11,7 +11,7 @@ $color-secondary: #010304;
 $color-white: #fff;
 $color-offwhite: #cccccc;
 //
-$color-grey: grey;
+$color-grey: #888888;
 $color-grey-light: grey;
 $color-grey-dark: grey;
 //
