--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -13,6 +13,7 @@
 @import "components/page_content";
 @import "components/overview";
 @import "components/galaxy_forum";
+@import "components/galaxy_status";
 @import "components/mining";
 @import "components/research_construction_waves";
 @import "components/population";
