--- a/scss/components/_scans.scss
+++ b/scss/components/_scans.scss
@@ -1,5 +1,77 @@
 #page_scan {
   div#full_page {
     display: table;
+    max-width: 900px;
+
+    .maintext {
+      > table {
+        width: auto;
+        min-width: 250px;
+
+        > tbody {
+          > tr {
+            background: $color-borders;
+
+            &:first-child {
+              th {
+                padding: .5rem .125rem;
+                background: $color-background;
+              }
+            }
+
+            > th,
+            > td {
+              vertical-align: middle;
+            }
+
+            > td {
+              padding: .25rem .75rem;
+
+              &:first-child {
+                display: inline-flex;
+                align-items: center;
+
+                a {
+                  padding-right: .5rem;
+                  width: 45px;
+                }
+
+                span {
+                  font-size: 1rem;
+                  text-transform: uppercase;
+                  padding: 0 .125rem;
+                  width: 35px;
+                  text-align: center;
+                }
+              }
+            }
+
+            &:nth-child(even) {
+              background: darken($color-borders, 2%);
+            }
+
+            table {
+              background: transparent;
+
+              tr {
+                &:nth-child(odd) {
+                  th,
+                  td {
+                    background: rgba(0, 0, 0, .02);
+                  }
+                }
+
+                &:nth-child(even) {
+                  th,
+                  td {
+                    background: rgba(0, 0, 0, 0.1);
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
