--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -155,10 +155,10 @@ span.center {
   box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, .4);
 }
 
-.tooltip {
-  top: auto !important;
-  left: auto !important;
-}
+//.tooltip {
+//  top: auto !important;
+//  left: auto !important;
+//}
 
 #pabox_inner {
   top: 0 !important;
