--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -41,5 +41,10 @@ $color-xandathrii: #2ba87e;
 $color-zikonian: #c93716;
 $color-eitraides: #111111;
 //
+$color-gc: #0080ff;
+$color-moc: #8081FF;
+$color-mow: #FF0000;
+$color-mod: #00b500;
+//
 $color-progress-completed: #378059;
 $color-progress-expected: rgba(#FAC05E, .4);
