--- a/scss/components/_universe.scss
+++ b/scss/components/_universe.scss
@@ -190,6 +190,7 @@
 
 .relations_neutral {
   background-color: $color-borders;
+
   &:nth-child(odd) {
     background-color: darken($color-borders, 3%);
   }
@@ -230,6 +231,10 @@
           font-size: .75rem;
           padding: .5rem .125rem;
         }
+      }
+
+      .gc {
+        color: $color-gc;
       }
 
       a,
