--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -25,6 +25,7 @@
 @import "components/universe";
 @import "components/galaxy";
 @import "components/alliance_defence";
+@import "components/alliance_page_ship_overview";
 @import "components/history";
 @import "components/news";
 @import "components/bcalc";
