--- a/scss/components/_alliance_page_ship_overview.scss
+++ b/scss/components/_alliance_page_ship_overview.scss
@@ -33,11 +33,19 @@
 
         td {
           background: $color-borders;
+
+          &:empty {
+            background: transparent;
+          }
         }
 
         &:nth-child(odd) {
           td {
             background-color: darken($color-borders, 3%);
+
+            &:empty {
+              background: transparent;
+            }
           }
         }
       }
