--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -39,7 +39,7 @@ $color-terran: #a18181;
 $color-cathaar: #4d88bc;
 $color-xandathrii: #2ba87e;
 $color-zikonian: #c93716;
-$color-eitraides: #a29d51;
+$color-eitraides: #9761b1;
 //
 $color-gc: #0080ff;
 $color-moc: #8081FF;
