--- a/scss/components/_buttons_links.scss
+++ b/scss/components/_buttons_links.scss
@@ -26,7 +26,8 @@ input[type="submit"],
 #bcalc input[type="button"],
 #bcalc input[type="submit"],
 #page input[type="button"],
-#add_other input[type="button"] {
+#add_other input[type="button"],
+ul.alliance_attack_claims_list a {
   display: inline-block;
   height: 1.5rem;
   margin: 1rem 0;
