--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -26,6 +26,7 @@
 @import "components/galaxy";
 @import "components/alliance_defence";
 @import "components/alliance_page_ship_overview";
+@import "components/alliance_attacks";
 @import "components/history";
 @import "components/news";
 @import "components/bcalc";
