--- a/scss/components/_news.scss
+++ b/scss/components/_news.scss
@@ -7,6 +7,30 @@
             > th,
             > td {
               background: rgba($color-primary, .1) !important;
+
+              table {
+                tr {
+                  &:nth-child(odd) {
+                    th,
+                    td {
+                      background: rgba(0, 0, 0, 0.15);
+                    }
+                  }
+
+                  &:nth-child(even) {
+                    th,
+                    td {
+                      background: rgba(0, 0, 0, 0.1);
+                    }
+                  }
+                  &:first-child {
+                    th,
+                    td {
+                      background: transparent;
+                    }
+                  }
+                }
+              }
             }
           }
 
